Issue #878: Remove the detour of ThingSearchCommand via connection persistence actor where possible.
Client actors now dispatch search commands to each other whenever
they contain a subscription ID to identify the intended recipient.
Only CreateSubscription is routed through the connection persistence
for round-robin subscription ID assignment.

Signed-off-by: Yufei Cai <yufei.cai@bosch.io>